# rbGyanX

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURSOR_FINAL_FIXES.md  CURSOR_FIXES.md  DISCLAIMER.md  Install-rbGyanX.ps1  Makefile  README.md  README_rbGyanX.md  SECURITY.md  VERSION.txt  clinical_template_generator.py  code1_dvh_preprocess.py  code2_dvh_plot_and_summary.py  code3_ntcp_analysis_ml.py  code4_ntcp_output_QA_reporter.py  code5_ntcp_factors_analysis.py  code6_tcp_analysis.py  code7_tcp_ntcp_integration.py  conftest.py  llm_qa_engine.py  pyproject.toml  pytest.ini  qa_comprehensive_test_suite.py  rbGyanX_cursor_prompt.md  rbgyanx_gui.py  rbgyanx_qa_test_suite.py  requirements-engine.txt  requirements-lock.txt  requirements.txt  run_tests.py  shap_suppl.py  synthetic_data_generator.py
ai/: __init__.py  api_llm_engine.py  local_llm_engine.py  rule_based_assistant.py
ask_rbgyanx/: __init__.py  calculator.py  enhanced_assistant.py  knowledge_registry.json  math_tools.py  scope_guard.py
clinical/: __init__.py  clinical_adapter.py  clinical_schema.json  hnscc_covariate_mapper.py
config/: tcp_parameters.yaml
core/: __init__.py  feature_registry.json  project_state.py  site_registry.json
docs/: GUI_MODES_AND_HELP.md  IMPLEMENTATION_ROADMAP.md  OUTCOME_DATA_SCHEMA.md  RBGYANX_1.0_DESKTOP.md  RBGYANX_MANIFESTO.md  RS_PARAMETRISATION.md  TECHNICAL_DEVELOPMENT_NOTE.md  TEST_RUN_SUMMARY.md  USER_MANUAL.html  VERIFICATION_REPORT.md  rbgyanx_user_manual.html  user_manual_generator.py  validation_report.json
engine/: .gitignore  CHANGELOG.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
engine/config/: __init__.py  plan_quality.py  plan_quality_indices_default.yaml  site_ntcp_params.py  site_params.py  site_params_default.yaml  site_params_ntcp_default.yaml  site_params_user.example.yaml  structure_aliases.py  tg263_aliases.py
engine/dicom_io/: __init__.py  dicom_reader.py  dvh_extractor.py  dvh_shape_features.py  patient_registry.py  site_detector.py  structure_mapper.py  tcia_hnscc_adapter.py  txt_dvh_reader.py
engine/docs/: ARCHITECTURE_rbgyanx_engine.md  FEASIBILITY_rbGyanX_INTEGRATION.md  ROADMAP_UNIFIED_TCP_NTCP.md
engine/examples/: README.md
engine/ml_models/: __init__.py  lgbm_tcp.py  model_manager.py  random_forest_tcp.py  xgboost_tcp.py
engine/outputs/: __init__.py  figures.py  ntcp_reporter.py  patient_summary_pdf.py  physical_reporter.py  reporter.py
engine/radiobiology/: __init__.py  bdvh.py  composite_decision.py  geud_tcp.py  logistic_tcp.py  lq_model.py  model_registry.py  ntcp_calculator.py  poisson_tcp.py  tcp_calculator.py  utcp.py  zaider_minerbo.py
engine/radiobiology/ntcp/: __init__.py  lkb_loglogit.py  lkb_probit.py  rs_poisson.py
engine/rbgyanx_engine/: __init__.py  __main__.py  _version.py  delta_analysis.py  engine.py  physical_dose.py  pipeline.py  run_config.py
engine/statistical_models/: __init__.py  cox_regression.py  epv_guard.py  logistic_tcp_mv.py
engine/tests/: test_clinical_features_merge.py  test_composite_decision.py  test_delta_analysis.py  test_dicom_reader.py  test_dvh_extractor.py  test_four_tier_harness.py  test_inverse_variance_consensus.py  test_mcd_ccs.py  test_ml_models.py  test_model_registry.py  test_ntcp_calibration.py  test_ntcp_models.py  test_ntcp_scientific_anchors.py  test_outputs.py  test_plan_quality.py  test_prostate_site.py  test_quantec.py  test_radiobiology.py  test_run_config.py  test_run_config_defaults.py  test_safety_guard.py  test_site_detector.py  test_statistical_models.py  test_structure_mapper.py  test_tcia_hnscc_adapter.py  test_txt_dvh_reader.py  test_uncertainty.py  test_utcp.py  test_validation.py  test_validation_metrics.py  test_xai.py
engine/tests/synthetic_data/: __init__.py  dvh_fixtures.py
engine/uncertainty/: __init__.py  dosimetric_uncertainty.py  hypoxia.py  inverse_variance_consensus.py  ntcp_mc.py  parameter_mc.py  setup_error.py  utcp_consensus.py
engine/validation/: __init__.py  calibration.py  clinical_safety_guard.py  cohort_consistency.py  external_val.py  four_tier_harness.py  hnscc_external_val.py  ntcp_calibration.py  plan_quality_eval.py  quantec_checker.py  tcp_evaluator.py  validation_metrics.py
engine/xai/: __init__.py  lime_tcp.py  pdp_ice.py  shap_tcp.py
engine_advanced/: README.md  pyproject.toml
engine_advanced/rbgyanx_advanced/: __init__.py  advanced_config.py  integration.py
engine_advanced/rbgyanx_advanced/dose3d/: __init__.py  dose_grid_extractor.py  dosiomics.py
engine_advanced/rbgyanx_advanced/pinn/: __init__.py  pinn_config.py
engine_advanced/rbgyanx_advanced/pinn/models/: __init__.py  pinn_base.py  tcp_pinn.py
engine_advanced/rbgyanx_advanced/pinn/training/: physics_loss.py  trainer.py
engine_advanced/tests/: test_dosiomics.py  test_dvh_shape_features.py  test_pinn_registry.py
engine_advanced_f/: pyproject.toml
engine_advanced_f/rbgyanx_advanced_f/: __init__.py  config.py  integration.py
engine_advanced_f/rbgyanx_advanced_f/bayesian/: __init__.py  ntcp_bayesian.py
engine_advanced_f/rbgyanx_advanced_f/pinn/: __init__.py  train_pinn.py
engine_advanced_f/tests/: test_bayesian_ntcp.py  test_part_f_integration.py  test_train_pinn.py
external_validation/: DATA_PROVENANCE.template.md  README.md  download_hnscc.py  requirements.txt  run_hnscc_validation.py
models/: __init__.py  ntcp_models.py  tcp_models.py
packaging/: build_installer.ps1  build_rbGyanX.ps1  consolidate_project.ps1  deep_clean.ps1  installer_license.txt  rbGyanX.iss  rbGyanX.spec  remove_legacy_desktop_folders.ps1  requirements-build-tensorflow.txt  requirements-build.txt  requirements-optional-advanced.txt  verify_project.ps1  verify_tensorflow.py
paper/: README.md  reproduce_figures.py  requirements.txt
qa/: __init__.py  auto_correction_engine.py  protected_modules.json  qa_overfitting.py  qa_summary_unifier.py  self_test_engine.py
rbgyanx/: __init__.py  app_metadata.py  paths.py  version.py
reproducibility/: DATA_INVENTORY.json  README.md  README_REAL_DATA.md  (+2 more)
(+122 files in other folders)
