[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rbgyanx"
version = "1.0.0"
description = "Radiobiology clinical decision support system (TCP/NTCP/UTCP/QUANTEC)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Kalyan Mondal" }]
keywords = ["radiotherapy", "TCP", "NTCP", "DVH", "DICOM", "radiobiology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "pydicom>=2.4",
    "dicompyler-core>=0.5.5",
    "scikit-learn>=1.3",
    "joblib>=1.2",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "pytest-randomly>=3.15",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-PyYAML",
    "cffconvert>=2.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
]
ml = [
    "xgboost>=1.7",
    "lightgbm>=4.0",
    "lifelines>=0.27",
    "shap>=0.41",
    "lime>=0.2",
]
torch = ["torch>=2.1"]
bayesian = ["pymc>=5.0", "arviz>=0.16"]
# Install all extras: pip install -e ".[dev,ml,torch,bayesian]" plus editable sub-packages

[project.urls]
Homepage = "https://github.com/kalyan2031990/rbGyanX"
Repository = "https://github.com/kalyan2031990/rbGyanX"
Documentation = "https://github.com/kalyan2031990/rbGyanX/blob/main/docs/TECHNICAL_DEVELOPMENT_NOTE.md"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "rbgyanx*",
    "clinical*",
    "utils*",
    "models*",
    "qa*",
]
exclude = ["engine*", "engine_advanced*", "engine_advanced_f*", "tests*", "packaging*"]

[tool.pytest.ini_options]
testpaths = [
    "engine/tests",
    "tests",
    "engine_advanced/tests",
    "engine_advanced_f/tests",
    "tests/synthetic",
]
python_files = ["test_*.py"]
addopts = [
    "--import-mode=importlib",
    "-q",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: fast isolated unit test",
    "integration: crosses module boundaries",
    "e2e: full pipeline test",
    "slow: long-running (skip in quick CI unless --runslow)",
    "requires_ml: needs xgboost/lightgbm stack",
    "requires_torch: needs PyTorch",
    "requires_pymc: needs PyMC",
    "requires_dicom: needs DICOM fixtures or local cohort",
    "requires_xgboost: needs xgboost",
    "requires_lifelines: needs lifelines",
    "dicom: synthetic or real DICOM round-trip",
]
filterwarnings = [
    "ignore::UserWarning:lifelines",
    "ignore::FutureWarning:sklearn",
]

[tool.coverage.run]
source = ["engine", "rbgyanx", "engine_advanced", "engine_advanced_f"]
omit = ["*/tests/*", "*/test_*.py", "*/conftest.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["engine", "engine_advanced", "engine_advanced_f", "rbgyanx", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"engine/tests/**" = ["S101"]
"scripts/**" = ["S603", "S607"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "engine.radiobiology.*",
    "radiobiology.*",
]
disallow_untyped_defs = true
check_untyped_defs = true
