[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rbgyanx-engine"
version = "1.0.0"
description = "Open-source TCP/NTCP radiobiology engine for rbGyanX CDSS (DICOM + multi-site)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "rbGyanX Team"}]
keywords = ["radiotherapy", "TCP", "NTCP", "DVH", "DICOM", "CDSS", "radiobiology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pydicom>=2.4.0",
    "dicompyler-core>=0.5.5",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "joblib>=1.2",
    "matplotlib>=3.7",
    "tabulate>=0.9",
]

[project.optional-dependencies]
ml = [
    "lifelines>=0.27",
    "xgboost>=1.7",
    "lightgbm>=4.0",
    "shap>=0.41",
    "lime>=0.2",
]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "black>=24.0", "ruff>=0.4"]

[project.scripts]
rbgyanx-engine = "rbgyanx_engine.__main__:main"

[project.urls]
Homepage = "https://github.com/kalyan2031990/rbGyanX_cdss"
Documentation = "https://github.com/kalyan2031990/rbGyanX_cdss#readme"

[tool.setuptools.packages.find]
where = [".", "tests"]
include = [
    "rbgyanx_engine*",
    "dicom_io*",
    "config*",
    "radiobiology*",
    "uncertainty*",
    "statistical_models*",
    "ml_models*",
    "xai*",
    "validation*",
    "outputs*",
    "synthetic_data*",
]
exclude = ["tests/test_*", "examples*", "archive*", "quantification*", "src*"]

[tool.setuptools.package-data]
config = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
